src/tests/krate/publish/snapshots/all__krate__publish__manifest__invalid_manifest_missing_name.snap
---
source: src/tests/krate/publish/manifest.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "failed to parse `Cargo.toml` manifest file\n\nTOML parse error at line 1, column 1\n  |\n1 | [package]\n  | ^^^^^^^^^\nmissing field `name`\n"
    }
  ]
}
