src/tests/krate/publish/snapshots/all__krate__publish__manifest__invalid_rust_version.snap
---
source: src/tests/krate/publish/manifest.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "failed to parse `Cargo.toml` manifest file\n\ninvalid `rust-version` value"
    }
  ]
}
