src/tests/krate/publish/snapshots/all__krate__publish__manifest__missing_manifest.snap
---
source: src/tests/krate/publish/manifest.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "uploaded tarball is missing a `Cargo.toml` manifest file"
    }
  ]
}
