src/tests/krate/publish/snapshots/all__krate__publish__manifest__multiple_manifests.snap
---
source: src/tests/krate/publish/manifest.rs
expression: response.json()
---
{
  "errors": [
    {
      "detail": "uploaded tarball contains more than one file with the same path: `foo-1.0.0/cargo.toml`"
    }
  ]
}
